--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">AsyncWars</string>
     <string name="start_bitmap_download_btn_text">Start</string>
     <string name="helper_text">Spinner animation to check UI blocking calls</string>
+    <string name="calculating_fibonacci_number">Calculating on Ui Thread: Fibonacci Number</string>
+    <string name="download_image_method">Download image using %1$s</string>
 </resources>
